--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-      <title>Getting Started</title>
-      <script src="https://unpkg.com/lodash@4.16.6"></script>
+        <title>Asset Management</title>
     </head>
     <body>
         <script src="dist/bundle.js"></script>
     </body>
-  </html>
+</html>
